# bitbox-wallet-app

./: .dockerignore  .gitignore  CHANGELOG.md  Makefile  go.mod  go.sum
.github/workflows/: ci.yml  playwright.yml
backend/: accounts.go  accounts_test.go  backend.go  backend_test.go  chart.go  swap.go
backend/accounts/: account.go  baseaccount.go
backend/bitrefill/: bitrefill.go
backend/coins/btc/: account.go
backend/coins/eth/: account.go  account_test.go  coin.go  coin_test.go  updater.go  updater_poll_test.go
backend/config/: accounts.go
backend/devices/bitbox02/: device.go  keystore.go  keystore_simulator_test.go
backend/handlers/: handlers.go
backend/keystore/: keystore.go
backend/market/: market.go
cmd/servewallet/: main.go
docs/rust-migration/: README.md
frontends/ios/: Makefile
frontends/web/: Makefile  playwright.config.ts
frontends/web/src/: app.tsx
rust/: Cargo.toml  README.md
rust/crates/bitbox-api/: Cargo.toml
rust/crates/bitbox-api/src/: lib.rs
rust/crates/bitbox-bridge/: Cargo.toml
rust/crates/bitbox-bridge/src/: lib.rs
rust/crates/bitbox-contracts/: Cargo.toml
rust/crates/bitbox-contracts/src/: lib.rs
rust/crates/bitbox-core/: Cargo.toml
rust/crates/bitbox-core/src/: lib.rs
rust/crates/bitbox-device/: Cargo.toml
rust/crates/bitbox-device/src/: lib.rs
rust/crates/bitbox-ffi-qt/: Cargo.toml
rust/crates/bitbox-ffi-qt/src/: lib.rs
rust/crates/bitbox-mobile/: Cargo.toml
rust/crates/bitbox-mobile/src/: lib.rs
scripts/rust_migration/: extract_contracts.py
util/errp/: errp.go
util/logging/: logging-stack-hook.go
(+55 files in other folders)
