[package]
name = "bitbox-api"
version = "0.1.0"
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
bitbox-bridge = { path = "../bitbox-bridge" }
bitbox-core = { path = "../bitbox-core" }
axum = { version = "0.8.6", features = ["ws"], optional = true }
futures-util = { version = "0.3.31", optional = true }
serde_json = { version = "1.0.145", optional = true }
tokio = { version = "1.48.0", features = ["net", "rt-multi-thread", "time"], optional = true }

[features]
default = []
server = ["dep:axum", "dep:futures-util", "dep:serde_json", "dep:tokio"]

[lib]
path = "src/lib.rs"
